# motoko-format

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
deployment/: schema.json
deployment/npm/: README.md  buffer.generated.js  index.test.js  package-lock.json  package.json  setup.js
examples/: dprint.json  repos  review-external-repos.sh  test-external-repos.sh
src/: format_text.rs  grammar.pest  lib.rs  main.rs  motoko.pest  motoko2.pest  wasm_plugin.rs
src/configuration/: builder.rs  configuration.rs  resolve_config.rs
src/generation/: README.md  context.rs  generate.rs  helper.rs  mod.rs  style-rules.md
src/motoko_parser/: motoko.pest  parser.rs
tests/: comment.mo  imports.mo  lit.mo  main.mo  module.mo  test.mo  test.rs
tests/specs/comments/: comment.txt  comment_linebreaks.txt  convert_doxygen_to_doc_comments.txt  doc_comment.txt  line_comment.txt
tests/specs/declarations/: exp_field.txt  if_else_hashtags.txt  module.txt  pattern_un.txt  switch_empty_case.txt  test.txt  type.txt
tests/specs/example/: crc.txt  hello_world.txt  motoko_text.txt  quicksort.txt  quicksort_main.txt  time.txt  who_am_i.mo  who_am_i.txt
tests/specs/functions/: for_loop.txt  function_call_with_comment.txt  function_equal_exp.txt  simple_function_calls.txt  switch.txt
tests/specs/imports/: comment.txt  import.txt  imports.txt  many.txt
tests/specs/open_problems/: empty_block.txt  format_numbers.txt  inconsistent linebreaks.txt  missing_separator.txt  pattern_un.txt  semicolon_before_comment.txt  single-block-function-argument.txt
tests/specs/simple/: test.txt
tests/specs/whitespace/: break.txt  case_tuple.txt  case_tuples_in_tuples.txt  empty.txt  empty_block.txt  if-elseif-elseif-else.txt  newlines.txt  space_after_shared.txt  space_between_declarations.txt  while-compare.txt
tests/specs/wip/: .keep  eval.txt  hello_world.txt  single-block-function-argument.txt  wip.txt
