[package]
name = "dprint-plugin-motoko"
version = "0.1.0"
authors = ["Martin Sigloch <motoko-format@projects.f0i.de>"]
edition = "2021"
# TODO?: rename to dprint-plugin-motoko
homepage = "https://gitlab.com/f0i/motoko-formater"
license = "MIT"
repository = "https://github.com/dprint/motoko-formater"
description = "Motoko formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# parse
pest = "2.1"
pest_derive = "2.1"
# pest = { path = "./pest/pest" }
# pest_derive = { path = "./pest/derive" }

# formatter
anyhow = "1.0.51"
dprint-core = { version = "0.58.2", features = ["wasm", "tracing", "formatting"] }
# dprint-core = { path = "dprint/crates/core", version = "0.58.2", features = ["wasm", "tracing", "formatting"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
dprint-development = "0.9.0"
