[package]
name = "dprint-plugin-motoko"
version = "0.1.0"
authors = ["Martin Sigloch <motoko-format@projects.f0i.de>"]
edition = "2021"
# TODO?: rename to dprint-plugin-motoko
homepage = "https://gitlab.com/f0i/motoko-formater"
license = "MIT"
repository = "https://github.com/dprint/motoko-formater"
description = "Motoko formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[dependencies]
# parser
pest = "2.1"
pest_derive = "2.1"
# pest = { path = "./pest/pest" }
# pest_derive = { path = "./pest/derive" }

# printer
anyhow = "1.0.51"
dprint-core = { version = "0.58.2", features = ["formatting"] }
# dprint-core = { path = "dprint/crates/core", version = "0.58.2", features = ["formatting"] }
serde = { version = "1.0.88", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.9.0"
serde_json = { version = "1.0" }